@@ -65,8 +65,9 @@
 #include "solib.h"
 #include "symfile.h"
 #include "observer.h"
-
 #include "gdb_string.h"
+#include <sys/procfs.h>
+#include "proc-utils.h"
 
 struct target_ops sol_thread_ops;
 
